fix dark model

--- a/source/css/studyToday.css
+++ b/source/css/studyToday.css
@@ -43,3 +43,18 @@
   position: relative;
   background: url("https://img10.360buyimg.com/ddimg/jfs/t1/166587/8/21344/72069/6088c24fEda5fdeb6/f9730ab637b7ca47.png");
 }
+
+.darkModel .study-today {
+
+  transition: background 0.3s;
+  background: #2d3032;
+
+  .study-container {
+    color: #8b949e;
+  }
+
+  .study-container .name a {
+    color: #c9d1d9;
+  }
+
+}
